2010-06-21  Sergio Martin <sergio.martin@artica.es>

	* godmode/reporting/graph_builder.main.php
	godmode/reporting/graph_builder.php
	godmode/reporting/graph_builder.graph_editor.php
	godmode/reporting/graph_builder.preview.php: Merged from trunk.
	Rewritted the combined graphs editor

2010-06-30  Sergio Martin <sergio.martin@artica.es>

	* operation/events/events.php: Merged from trunk. Changed 
	the Server and All text on the events filter to use gettext. 

2010-06-30  Sergio Martin <sergio.martin@artica.es>

	* operation/events/events.php: Merged fix from trunk.
	Fixed the agent filter. Now the pagination keep the 
	agent and shows the name of the agent in the 

2010-06-30  SAncho Lerena <slerena@artica.es>

	* pandora_console.redhat.spec: Specific spec for Redhat.

2010-06-23  Ramon Novoa  <rnovoa@artica.es>

	* include/fgraph.php: Continue drawing combined charts if modules
	  without data are found.

2010-06-18  Sergio Martin <sergio.martin@artica.es>

	* godmode/users/user_list.php: Merged fix from
	trunk. Fixed the bug of delete agents in IExplorer
	and added deleted confirm for bug: 3017261

2010-06-17  Sergio Martin <sergio.martin@artica.es>

	* godmode/reporting/map_builder.php: Merged fix from trunk
	for bug 3017262

2010-05-05 Miguel de Dios  <miguel.dedios@artica.es>

	Merged from trunk:
	
	* images/custom_logo/sourceforge.jpg,
	images/custom_logo/pandora_logo_head.jpg, images/custom_logo/none.jpg: added
	the version in jpeg of files for PDF reports.

2010-06-14  Sergio Martin <sergio.martin@artica.es>

	* godmode/reporting/graph_builder.php: Merged fixed 
	from trunk

2010-06-09  Miguel de Dios  <miguel.dedios@artica.es>

	* include/javascript/pandora.js: fixed lost semi colon.
	
	* godmode/reporting/visual_console_builder.editor.php,
	godmode/reporting/reporting_builder.item_editor.php: fixed lost include
	autocomplete javascript file.
	
	Fixes: #3013425

2010-06-09  Ramon Novoa  <rnovoa@artica.es>

	* general/license/pandora_info_pt_BR.html,